--- a/package.xml
+++ b/package.xml
@@ -52,7 +52,8 @@
   <build_depend>roscpp</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
-
+  <exec_depend>joy</exec_depend>
+  <exec_depend>teleop_twist_joy</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
